Fixed margin issue on mobile

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -33,12 +33,12 @@ a {
 .get-started-button {
   dispay: block;
   float: left;
+  margin-right: 10px;
 }
 
 .chat-button {
   dispay: block;
   float: left;
-  margin-left: 10px;
 }
 
 .github-star-button-top {
